--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,24 +1,35 @@
 name: 'build-test'
-on: # rebuild any PRs and main branch changes
-  pull_request:
+
+on:
   push:
-    branches:
-      - main
-      - 'releases/*'
+    branches: [ "main" ]
+# on: # rebuild any PRs and main branch changes
+#   pull_request:
+#   push:
+#     branches:
+#       - main
+#       - 'releases/*'
 
 jobs:
-  build: # make sure build/ci work properly
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - run: |
-          npm install
-      - run: |
-          npm run all
+#   build: # make sure build/ci work properly
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v3
+#       - run: |
+#           npm install
+#       - run: |
+#           npm run all
+
   test: # make sure the action works on a clean machine without building
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: ./
+      - name: Test github-token
+        run: echo ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Checkoit repository
+        uses: actions/checkout@v3
+
+      - name: Run workflow
+        uses: ./
         with:
-          milliseconds: 1000
+          github-token: ${{ secrets.GITHUB_TOKEN }}
