--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,10 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'Create JIRA Release'
+description: 'Creates a JIRA release containing tickets referenced in commit subjects'
+author: 'Alexander Hirdman'
 inputs:
-  milliseconds: # change this
+  github-token:
     required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+    description: 'github token'
 runs:
   using: 'node16'
   main: 'dist/index.js'
