--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,3 +33,4 @@ jobs:
         uses: ./
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          jira-webhook-url: https://automation.atlassian.com/pro/hooks/98a41dc0fd2df99da7b3c96060dca77462963929
